# fragility-detector

./: .gitignore  CLAUDE.md  pyproject.toml  run_filtered_literary_eval.py  run_golden_eval.py  run_literary_eval.py  run_pdca_r1.py  run_pdca_r2.py  run_real_literary_eval.py  run_session_eval.py  run_session_real_eval.py  run_stratified_validation.py  run_validation.py
data/: golden_set.jsonl
data/literary/: .gitignore  catherine_earnshaw_quotes.txt  chandler_bing_quotes.txt  curated_eval.jsonl  don_draper_quotes.txt  elinor_dashwood_quotes.txt  extract_dialogues.py  heathcliff_quotes.txt  jane_eyre_quotes.txt  miss_havisham_quotes.txt  mr_darcy_quotes.txt  pip_quotes.txt  scrooge_quotes.txt
fragility_detector/: __init__.py  __main__.py  api_retry.py  behavioral_features.py  cli.py  detector.py  detector_v2.py  eval_cases.py  eval_fragility.py  eval_sessions.py  literary_characters.py  models.py  session_detector.py  speaker.py  star_map.py  v8x_adapter.py
fragility_detector/data/: derive_weights.json
tests/: test_api_retry.py  test_behavioral_features.py  test_cli.py  test_detector.py  test_models.py  test_session_detector.py  test_star_map.py  test_v8x_adapter.py
