[tool.poetry]
name = "fragility-detector"
version = "0.1.0"
description = "Fragility pattern detection: how users express or hide vulnerability"
authors = ["Michael"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.0"
anthropic = ">=0.40"
numpy = ">=1.26"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
